--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -46,6 +46,7 @@ lead=عميل متوقع
 map-background=خلفية الخريطة
 map-to=تعيين إلى
 map[relational]=الخريطه
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=تعيين الحقول
 new-content=محتوى جديد (Automatic Translation)
 new-experience=خبرة جديدة
