--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -46,6 +46,7 @@ lead=Доведе (Automatic Translation)
 map-background=Карта фон (Automatic Translation)
 map-to=Карта на (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Съпоставяне на полета (Automatic Translation)
 new-content=Ново съдържание (Automatic Translation)
 new-experience=Нов опит (Automatic Translation)
