--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Fons del mapa
 map-to=Assigna a
 map[relational]=Mapa
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Camps de mapatges
 new-content=Nous continguts (Automatic Translation)
 new-experience=Experiència nova
