--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -46,6 +46,7 @@ lead=Vést (Automatic Translation)
 map-background=Pozadí s mapou (Automatic Translation)
 map-to=Mapovat na (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mapování polí (Automatic Translation)
 new-content=Nový obsah (Automatic Translation)
 new-experience=Nová zkušenost (Automatic Translation)
