--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Kartenhintergrund
 map-to=Zuordnen zu
 map[relational]=Landkarte
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Zuordnungsfelder
 new-content=New Content (Automatic Copy)
 new-experience=Neues Erlebnis
