--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -46,6 +46,7 @@ lead=Οδηγήσει (Automatic Translation)
 map-background=Φόντο του χάρτη (Automatic Translation)
 map-to=Αντιστοίχιση σε (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Χαρτογράφηση χωραφιών (Automatic Translation)
 new-content=Νέο περιεχόμενο (Automatic Translation)
 new-experience=Νέα εμπειρία (Automatic Translation)
