--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -46,6 +46,7 @@ lead=Texto destacado
 map-background=Fondo del mapa
 map-to=Asignar a
 map[relational]=Mapa
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Asignando campos
 new-content=Nuevo contenido (Automatic Translation)
 new-experience=Nueva experiencia
