--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -46,6 +46,7 @@ lead=Plii (Automatic Translation)
 map-background=Kaart taust (Automatic Translation)
 map-to=Kaart (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Väljade vastendamine (Automatic Translation)
 new-content=Uus sisu (Automatic Translation)
 new-experience=Uus kogemus (Automatic Translation)
