--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -46,6 +46,7 @@ lead=هدایت
 map-background=سابقه و هدف نقشه (Automatic Translation)
 map-to=اختصاص به
 map[relational]=نقشه
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=زمینه های نقشه برداری (Automatic Translation)
 new-content=محتوای جدید (Automatic Translation)
 new-experience=تجربه جدید (Automatic Translation)
