--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -46,6 +46,7 @@ lead=Liidi
 map-background=Yhdistä Tausta
 map-to=Yhdistä kohteeseen
 map[relational]=Kartta
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Yhdistää Kenttiä
 new-content=New Content (Automatic Copy)
 new-experience=Uusi Kokemus
