--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -46,6 +46,7 @@ lead=Prospect
 map-background=Fond de carte
 map-to=Mise en correspondance par rapport à
 map[relational]=Carte
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Champs de mappage
 new-content=Nouveau contenu (Automatic Translation)
 new-experience=Nouvelle expérience
