--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
@@ -46,6 +46,7 @@ lead=नेतृत्व (Automatic Translation)
 map-background=मानचित्र पृष्ठभूमि (Automatic Translation)
 map-to=करने के लिए मैप (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=मैपिंग फ़ील्ड्स (Automatic Translation)
 new-content=नई सामग्री (Automatic Translation)
 new-experience=नया अनुभव (Automatic Translation)
