--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Térkép háttere
 map-to=Hozzárendelés
 map[relational]=Térkép
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mezők hozzárendelése
 new-content=Új tartalom (Automatic Translation)
 new-experience=Új élmény
