--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -46,6 +46,7 @@ lead=portare (Automatic Translation)
 map-background=Sfondo di mappa (Automatic Translation)
 map-to=Mappa di (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mapping dei campi (Automatic Translation)
 new-content=Nuovo contenuto (Automatic Translation)
 new-experience=Nuova esperienza (Automatic Translation)
