--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -46,6 +46,7 @@ lead=הוביל (Automatic Translation)
 map-background=מפת רקע (Automatic Translation)
 map-to=למפות (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=מיפוי השדות (Automatic Translation)
 new-content=תוכן חדש (Automatic Translation)
 new-experience=חוויה חדשה (Automatic Translation)
