--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -46,6 +46,7 @@ lead=リード
 map-background=地図の背景
 map-to=マップ先
 map[relational]=マッピング
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=マッピングフィールド
 new-content=New Content (Automatic Copy)
 new-experience=新しいエクスペリエンス
