--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -46,6 +46,7 @@ lead=리드 (Automatic Translation)
 map-background=지도 배경 (Automatic Translation)
 map-to=지도 (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=필드 매핑 (Automatic Translation)
 new-content=새 콘텐츠 (Automatic Translation)
 new-experience=새로운 경험 (Automatic Translation)
