--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -46,6 +46,7 @@ lead=Sukelti (Automatic Translation)
 map-background=Žemėlapio fone (Automatic Translation)
 map-to=Susieti su (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Laukų priskyrimą (Automatic Translation)
 new-content=Naujas turinys (Automatic Translation)
 new-experience=Nauja patirtis (Automatic Translation)
