--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -46,6 +46,7 @@ lead=Føre (Automatic Translation)
 map-background=Kart bakgrunn (Automatic Translation)
 map-to=Tilordnes (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Tilordnet felt (Automatic Translation)
 new-content=Nytt innhold (Automatic Translation)
 new-experience=Ny opplevelse (Automatic Translation)
