--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Achtergrond toewijzen
 map-to=Toewijzen aan
 map[relational]=Kaart
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Velden worden Toegewezen
 new-content=New Content (Automatic Copy)
 new-experience=Nieuwe ervaring
