--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -46,6 +46,7 @@ lead=Prowadzić (Automatic Translation)
 map-background=Tło mapy (Automatic Translation)
 map-to=Mapy do (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mapowania pól (Automatic Translation)
 new-content=Nowa zawartość (Automatic Translation)
 new-experience=Nowe doświadczenia (Automatic Translation)
