--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Fundo de mapa
 map-to=Mapear para
 map[relational]=Mapa
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mapeando Campos
 new-content=Novo conteúdo (Automatic Translation)
 new-experience=Nova experiência
