--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -46,6 +46,7 @@ lead=Duce (Automatic Translation)
 map-background=Hartă fundal (Automatic Translation)
 map-to=Harta pentru (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Câmpurile de cartografiere (Automatic Translation)
 new-content=Continut nou (Automatic Translation)
 new-experience=Experienţă nouă (Automatic Translation)
