--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -46,6 +46,7 @@ lead=Привести (Automatic Translation)
 map-background=Справочная карта (Automatic Translation)
 map-to=Карта для (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Сопоставление полей (Automatic Translation)
 new-content=Новый контент (Automatic Translation)
 new-experience=Новый опыт (Automatic Translation)
