--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -46,6 +46,7 @@ lead=Viesť (Automatic Translation)
 map-background=Mapa pozadia (Automatic Translation)
 map-to=Mapa (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mapovanie polí (Automatic Translation)
 new-content=Nový obsah (Automatic Translation)
 new-experience=Nový zážitok (Automatic Translation)
