--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -46,6 +46,7 @@ lead=Vodi (Automatic Translation)
 map-background=Zemljevid ozadje (Automatic Translation)
 map-to=Zemljevid (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Preslikave polj (Automatic Translation)
 new-content=Nova vsebina (Automatic Translation)
 new-experience=Nova izkušnja (Automatic Translation)
