--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Bakgrundskarta
 map-to=Karta till
 map[relational]=Kartor
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mappning av fält
 new-content=New Content (Automatic Copy)
 new-experience=Ny upplevelse
