--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
@@ -46,6 +46,7 @@ lead=பெரிய எழுத்து
 map-background=வரைபட பின்னணி
 map-to=வரைபடம்
 map[relational]=வரைபடம்
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=வரைபடத்தின் ஃபீல்டுகள்
 new-content=New Content (Automatic Copy)
 new-experience=புதிய அனுபவம்
