--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -46,6 +46,7 @@ lead=ลูกค้า เป้าหมาย (Automatic Translation)
 map-background=พื้นหลังแผนที่ (Automatic Translation)
 map-to=แผนที่ (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=การแม็ปฟิลด์ (Automatic Translation)
 new-content=สร้างเนื้อหา (Automatic Translation)
 new-experience=ประสบการณ์ใหม่ (Automatic Translation)
