--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -46,6 +46,7 @@ lead=Kurşun (Automatic Translation)
 map-background=Harita arka plan (Automatic Translation)
 map-to=Eşleme (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Eşleme alanları (Automatic Translation)
 new-content=Yeni Içerik (Automatic Translation)
 new-experience=Yeni bir deneyim (Automatic Translation)
