--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -46,6 +46,7 @@ lead=Привести (Automatic Translation)
 map-background=Карта фону (Automatic Translation)
 map-to=Зіставити (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Зіставлення полів (Automatic Translation)
 new-content=Новий контент (Automatic Translation)
 new-experience=Новий досвід (Automatic Translation)
