--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -46,6 +46,7 @@ lead=Dẫn (Automatic Translation)
 map-background=Bản đồ nền (Automatic Translation)
 map-to=Bản đồ đến (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Lập bản đồ trường (Automatic Translation)
 new-content=Nội dung mới (Automatic Translation)
 new-experience=Trải nghiệm mới (Automatic Translation)
