--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -46,6 +46,7 @@ lead=突出
 map-background=地图背景
 map-to=映射到
 map[relational]=映射
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=映射字段
 new-content=新内容 (Automatic Translation)
 new-experience=新体验
