--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -46,6 +46,7 @@ lead=導致 (Automatic Translation)
 map-background=地圖背景 (Automatic Translation)
 map-to=地圖到 (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=映射欄位 (Automatic Translation)
 new-content=新內容 (Automatic Translation)
 new-experience=全新體驗 (Automatic Translation)
