--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -46,6 +46,7 @@ lead=Memimpin (Automatic Translation)
 map-background=Peta latar belakang (Automatic Translation)
 map-to=Peta untuk (Automatic Translation)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Bidang pemetaan (Automatic Translation)
 new-content=Konten baru (Automatic Translation)
 new-experience=Pengalaman baru (Automatic Translation)
