--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sr_RS.properties
@@ -46,6 +46,7 @@ lead=Lead (Automatic Copy)
 map-background=Map Background (Automatic Copy)
 map-to=Map to (Automatic Copy)
 map[relational]=Map (Automatic Copy)
+mapped-contents=Mapped Contents (Automatic Copy)
 mapping-fields=Mapping Fields (Automatic Copy)
 new-content=New Content (Automatic Copy)
 new-experience=New Experience (Automatic Copy)
