--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_bg.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Формат по подразбиране (Automatic Translation)
 email-page-added-body=Страница добавена тялото на имейл (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Имейл страница добави обект (Au
 email-page-updated-body=Изпратете страницата актуализира тяло (Automatic Translation)
 email-page-updated-enabled=Имейл страница актуализирана поддръжка (Automatic Translation)
 email-page-updated-subject=Изпратете страницата актуализира темата (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Име на първа страница (Automatic Translation)
 get-creole-editor=Креолски редактор (Automatic Translation)
 get-html-editor=HTML редактор (Automatic Translation)
 get-media-wiki-editor=Media Wiki редактор (Automatic Translation)
 initial-node-name=Име на първоначалната възел (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Страница коментари поддръжка (Automatic Translation)
 page-minor-edit-add-social-activity=Страница Мала редактиране добавите социална дейност (Automatic Translation)
 page-minor-edit-send-email=Страница Мала Редактиране Изпращане на имейл (Automatic Translation)
