--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_cs.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Výchozí formát (Automatic Translation)
 email-page-added-body=Page Added text e-mailu (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Stránku e-mailem přidat téma (Automatic Translation)
 email-page-updated-body=Aktualizace e-mailové stránky tělo (Automatic Translation)
 email-page-updated-enabled=Aktualizace stránky e-mailu povoleno (Automatic Translation)
 email-page-updated-subject=Aktualizace e-mailové stránky předmětu (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Front Page název (Automatic Translation)
 get-creole-editor=Kreolština Editor (Automatic Translation)
 get-html-editor=HTML Editor (Automatic Translation)
 get-media-wiki-editor=Media Editor wikiwebů (Automatic Translation)
 initial-node-name=Název počátečního uzlu (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Stránky připomínky povoleny (Automatic Translation)
 page-minor-edit-add-social-activity=Stránky malé úpravy přidat společenské aktivity (Automatic Translation)
 page-minor-edit-send-email=Stránky malé úpravy poslat Email (Automatic Translation)
