--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_el.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_el.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Προεπιλεγμένη μορφή (Automatic Translation)
 email-page-added-body=Σελίδα προστιθέμενη σώμα μηνύματος ηλεκτρονικού ταχυδρομείου (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Προστεθεί θέμα σελίδα ηλεκτρο
 email-page-updated-body=Ενημέρωση της σελίδας ηλεκτρονικό ταχυδρομείο σώμα (Automatic Translation)
 email-page-updated-enabled=Σελίδα ηλεκτρονικού ταχυδρομείου ενημερώνεται ενεργοποιημένη (Automatic Translation)
 email-page-updated-subject=Ενημερωμένο θέμα σελίδα ηλεκτρονικού ταχυδρομείου (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Μπροστινή σελίδα όνομα (Automatic Translation)
 get-creole-editor=Creole Editor (Automatic Translation)
 get-html-editor=Πρόγραμμα επεξεργασίας HTML (Automatic Translation)
 get-media-wiki-editor=Media Wiki Editor (Automatic Translation)
 initial-node-name=Όνομα του αρχικού κόμβου (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Σελίδα σχόλια ενεργοποιημένη (Automatic Translation)
 page-minor-edit-add-social-activity=Επεξεργασία σελίδας Μικράς προσθήκη κοινωνική δραστηριότητα (Automatic Translation)
 page-minor-edit-send-email=Επεξεργασία σελίδας Μικράς Στείλτε Email (Automatic Translation)
