--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_hi_IN.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=डिफ़ॉल्ट स्वरूप (Automatic Translation)
 email-page-added-body=ईमेल पेज जोड़े गए शरीर (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=ईमेल पेज विषय जोड़ा (Au
 email-page-updated-body=ईमेल पृष्ठ अद्यतन शरीर (Automatic Translation)
 email-page-updated-enabled=ईमेल पृष्ठ अद्यतन सक्षम (Automatic Translation)
 email-page-updated-subject=ईमेल पेज विषय अद्यतन (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=फ्रंट पेज नाम (Automatic Translation)
 get-creole-editor=क्रियोल संपादक (Automatic Translation)
 get-html-editor=HTML संपादक (Automatic Translation)
 get-media-wiki-editor=मीडिया विकी संपादक (Automatic Translation)
 initial-node-name=प्रारंभिक नोड नाम (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=पृष्ठ टिप्पणियां सक्षम (Automatic Translation)
 page-minor-edit-add-social-activity=पृष्ठ गौण सामाजिक गतिविधि जोड़ें संपादित करें (Automatic Translation)
 page-minor-edit-send-email=पृष्ठ लघु संपादित करें ईमेल भेजें (Automatic Translation)
