--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_in.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_in.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Format standar (Automatic Translation)
 email-page-added-body=Email Page Added tubuh (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Subjek email halaman ditambahkan (Automatic Translation
 email-page-updated-body=Email halaman diperbarui tubuh (Automatic Translation)
 email-page-updated-enabled=Email halaman diperbarui diaktifkan (Automatic Translation)
 email-page-updated-subject=Subjek email halaman Diperbarui (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nama halaman depan (Automatic Translation)
 get-creole-editor=Creole Editor (Automatic Translation)
 get-html-editor=HTML Editor (Automatic Translation)
 get-media-wiki-editor=Media Wiki Editor (Automatic Translation)
 initial-node-name=Nama awal (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Halaman komentar diaktifkan (Automatic Translation)
 page-minor-edit-add-social-activity=Edit halaman kecil menambah kegiatan sosial (Automatic Translation)
 page-minor-edit-send-email=Minor halaman Edit Kirim Email (Automatic Translation)
