--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_pl.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Domyślny Format (Automatic Translation)
 email-page-added-body=Treść wiadomości e-mail Page Added (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Temat dodano stronę wiadomości (Automatic Translation
 email-page-updated-body=Aktualizacja strony e-mail ciała (Automatic Translation)
 email-page-updated-enabled=Aktualizacja strony e-mail włączone (Automatic Translation)
 email-page-updated-subject=Aktualizacja strony e-mail podmiotu (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nazwa strony (Automatic Translation)
 get-creole-editor=Kreolski edytora (Automatic Translation)
 get-html-editor=Edytor HTML (Automatic Translation)
 get-media-wiki-editor=Edytor Wiki Media (Automatic Translation)
 initial-node-name=Nazwa węzła początkowego (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Komentarze strona włączona (Automatic Translation)
 page-minor-edit-add-social-activity=Edytuj stronę drobne Dodaj aktywność społeczna (Automatic Translation)
 page-minor-edit-send-email=Edytuj stronę Minor Wyślij E-mail (Automatic Translation)
