--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ca.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Tipus de MIME d'adjunt de Wiki permesos
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Establiu tipus de MIME vàlids per als adjunts de Wiki. Un tipus de MIME * permetrà tots els tipus de MIME.
 default-format=Format predeterminat
 email-page-added-body=Cos del correu electrònic de pàgina afegida
@@ -7,12 +7,13 @@ email-page-added-subject=Tema afegit de la pàgina de correu electrònic
 email-page-updated-body=Cos actualitzat de la pàgina de correu electrònic
 email-page-updated-enabled=Pàgina de correu electrònic actualitzat habilitada
 email-page-updated-subject=Tema actualitzat de la pàgina de correu electrònic
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nom de la pàgina frontal
 get-creole-editor=Editor Creole
 get-html-editor=Editor d'HTML
 get-media-wiki-editor=Editor Media Wiki
 initial-node-name=Nom del node inicial
-maximum-wiki-attachment-size=Mida màxima de l'adjunt de Wiki
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Comentaris de la pàgina habilitats
 page-minor-edit-add-social-activity=Afegeix activitat social d'edició menor de pàgina
 page-minor-edit-send-email=Enviament de correu electrònic d'edició menor de pàgina
