--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_es.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_es.properties
@@ -7,6 +7,7 @@ email-page-added-subject=Asunto del correo de notificación de página nuevas
 email-page-updated-body=Cuerpo del correo de notificación de actualización de pagina
 email-page-updated-enabled=Notificación por correo de actualización de páginas habilitada
 email-page-updated-subject=Asunto del correo de notificación de actualización de páginas
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nombre de página principal
 get-creole-editor=Editor Creole
 get-html-editor=Editor HTML
