--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_et.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_et.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Vaikevorming (Automatic Translation)
 email-page-added-body=E-posti lehel Added keha (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Saada lehekülg on teema (Automatic Translation)
 email-page-updated-body=Saada lehekülg uuendatud keha (Automatic Translation)
 email-page-updated-enabled=Saada lehekülg uuendatud lubatud (Automatic Translation)
 email-page-updated-subject=Saada lehekülg uuendatud teema (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Esilehe nimi (Automatic Translation)
 get-creole-editor=Kreooli toimetaja (Automatic Translation)
 get-html-editor=HTML-i redaktoriga (Automatic Translation)
 get-media-wiki-editor=Meedia Wiki toimetaja (Automatic Translation)
 initial-node-name=Esialgne sõlme nimi (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Lehekülg on kommentaarid (Automatic Translation)
 page-minor-edit-add-social-activity=Lehe alaealise Muuda aadr sotsiaalse aktiivsuse (Automatic Translation)
 page-minor-edit-send-email=Lehe väike Edit saata e-posti (Automatic Translation)
