--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_fa.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=شکلبندی پیش گزیده (Automatic Translation)
 email-page-added-body=اضافه شده به صفحه ایمیل بدن (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=صفحه ایمیل ارسال موضوع (Automatic Tr
 email-page-updated-body=بروز رسانی صفحه ایمیل بدن (Automatic Translation)
 email-page-updated-enabled=بروز رسانی صفحه ایمیل فعال (Automatic Translation)
 email-page-updated-subject=موضوع انتشار صفحه ایمیل (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=نام صفحه اول (Automatic Translation)
 get-creole-editor=ویرایشگر کریول (Automatic Translation)
 get-html-editor=ویرایشگر متنی (Automatic Translation)
 get-media-wiki-editor=ویرایشگر ویکی مدیا (Automatic Translation)
 initial-node-name=نام گره اولیه (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=صفحه نظرات فعال (Automatic Translation)
 page-minor-edit-add-social-activity=ویرایش جزئی صفحه اضافه کردن فعالیت های اجتماعی (Automatic Translation)
 page-minor-edit-send-email=ویرایش جزئی صفحه ارسال ایمیل (Automatic Translation)
