--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_fr.properties
@@ -7,6 +7,7 @@ email-page-added-subject=Objet de l'e-mail Page ajoutée
 email-page-updated-body=Corps de l'e-mail Page actualisée
 email-page-updated-enabled=E-mail Page actualisée activé
 email-page-updated-subject=Objet de l'e-mail Page actualisée
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nom de la page de garde
 get-creole-editor=Éditeur Creole
 get-html-editor=Éditeur HTML
