--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_hu.properties
@@ -7,6 +7,7 @@ email-page-added-subject=E-mail, új oldal, tárgy
 email-page-updated-body=E-mail, oldal frissítve, törzs
 email-page-updated-enabled=E-mail, oldal frissítve, engedélyezve
 email-page-updated-subject=E-mail, oldal frissítve, tárgy
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Címlap neve
 get-creole-editor=Creole szerkesztő
 get-html-editor=HTML szerkesztő
