--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_it.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_it.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Formato predefinito
 email-page-added-body=E-mail Page Added corpo (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Pagina di posta elettronica aggiunto soggetto (Automati
 email-page-updated-body=Aggiornamento della pagina e-mail corpo (Automatic Translation)
 email-page-updated-enabled=Aggiornamento della pagina di posta elettronica abilitato (Automatic Translation)
 email-page-updated-subject=Aggiornamento della pagina e-mail soggetto (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nome della pagina principale
 get-creole-editor=Editor Creole
 get-html-editor=Editor HTML
 get-media-wiki-editor=Editor MediaWiki
 initial-node-name=Nome del nodo iniziale
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Commenti pagina abilitati
 page-minor-edit-add-social-activity=Aggiungi una modifica minore nelle social activity
 page-minor-edit-send-email=Invia email per una modifica minore
