--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_iw.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=פורמט ברירת מחדל
 email-page-added-body=גוף דף דוא"ל שנוסף
@@ -7,12 +7,13 @@ email-page-added-subject=נושא דף דוא"ל שנוסף
 email-page-updated-body=גוף דף דוא"ל שעודכן
 email-page-updated-enabled=דף דוא"ל שעודכן הפך לזמין
 email-page-updated-subject=נושא דף דוא"ל שעודכן
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=שם עמוד ראשי
 get-creole-editor=עורך Creole
 get-html-editor=עורך HTML
 get-media-wiki-editor=עורך מדיה-ויקי
 initial-node-name=שם הצומת הראשונית
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=תגובות דף זמינות
 page-minor-edit-add-social-activity=עריכת דף משנית הוסף פעילות חברתית
 page-minor-edit-send-email=עריכת דף משנית שלח דוא"ל
