--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ko.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=기본 형식 (Automatic Translation)
 email-page-added-body=이메일 페이지 추가 본문 (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=이메일 페이지 제목 추가 (Automatic Translatio
 email-page-updated-body=이메일 페이지 업데이트 몸 (Automatic Translation)
 email-page-updated-enabled=이메일 페이지 업데이트 활성화 (Automatic Translation)
 email-page-updated-subject=이메일 페이지 제목 업데이트 (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=프론트 페이지 이름 (Automatic Translation)
 get-creole-editor=크리올 편집기 (Automatic Translation)
 get-html-editor=HTML 편집기 (Automatic Translation)
 get-media-wiki-editor=미디어 위 키 편집기 (Automatic Translation)
 initial-node-name=초기 노드 이름 (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=사용 하는 페이지 코멘트 (Automatic Translation)
 page-minor-edit-add-social-activity=사회 활동을 추가 하는 페이지 사소한 편집 (Automatic Translation)
 page-minor-edit-send-email=이메일 보내기 페이지 사소한 편집 (Automatic Translation)
