--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_lt.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Numatytasis formatas (Automatic Translation)
 email-page-added-body=El. paštas Page pridėtinės kūno (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Interneto el. pašto puslapį įtraukti tema (Automatic
 email-page-updated-body=El. puslapis atnaujintas kūno (Automatic Translation)
 email-page-updated-enabled=El. puslapis atnaujintas įjungtas (Automatic Translation)
 email-page-updated-subject=El. puslapis atnaujinamas atsižvelgiant (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Puslapio pavadinimas (Automatic Translation)
 get-creole-editor=Kreolų redaktorius (Automatic Translation)
 get-html-editor=HTML redaktorius (Automatic Translation)
 get-media-wiki-editor=Media Wiki redaktorius (Automatic Translation)
 initial-node-name=Pirminio mazgo pavadinimas (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Puslapis komentarų įjungtas (Automatic Translation)
 page-minor-edit-add-social-activity=Puslapis nepilnametis redagavimo pridėti socialinės veiklos (Automatic Translation)
 page-minor-edit-send-email=Puslapis nepilnametis redagavimo siųsti el. laišką (Automatic Translation)
