--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_nb.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Standardformat (Automatic Translation)
 email-page-added-body=E-post siden Added kroppen (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Emnelinjene siden lagt (Automatic Translation)
 email-page-updated-body=Send siden oppdatert kroppen (Automatic Translation)
 email-page-updated-enabled=Send siden oppdatert aktivert (Automatic Translation)
 email-page-updated-subject=Emnelinjene siden oppdatert (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Forsiden navn (Automatic Translation)
 get-creole-editor=Kreolsk Editor (Automatic Translation)
 get-html-editor=HTML-redigeringsprogrammet (Automatic Translation)
 get-media-wiki-editor=Media Wiki-redigerer (Automatic Translation)
 initial-node-name=Første nodenavnet (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Siden kommentarer aktivert (Automatic Translation)
 page-minor-edit-add-social-activity=Siden mindre Rediger legge sosial aktivitet (Automatic Translation)
 page-minor-edit-send-email=Siden mindre Rediger Send e-post (Automatic Translation)
