--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ro.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Formatul implicit (Automatic Translation)
 email-page-added-body=E-mail Page adăugată corpului (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Filme adăugate subiect (Automatic Translation)
 email-page-updated-body=E-mail pagină actualizată corpului (Automatic Translation)
 email-page-updated-enabled=Actualizat în pagina de e-mail activată (Automatic Translation)
 email-page-updated-subject=Pagina actualizată subiect (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Nume de pagină (Automatic Translation)
 get-creole-editor=Creolă Editor (Automatic Translation)
 get-html-editor=HTML Editor (Automatic Translation)
 get-media-wiki-editor=Mass-media Editor de Wiki (Automatic Translation)
 initial-node-name=Iniţial Node nume (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Pagina de comentarii permis (Automatic Translation)
 page-minor-edit-add-social-activity=Filme minore Edit Adauga activitate socială (Automatic Translation)
 page-minor-edit-send-email=Filme minore editare trimite E-mail (Automatic Translation)
