--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ru.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Формат по умолчанию (Automatic Translation)
 email-page-added-body=Тело страницы Добавлено электронной почты (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Тема добавлена страница элект
 email-page-updated-body=Страница электронной почты обновлена тела (Automatic Translation)
 email-page-updated-enabled=Обновлена страница электронной почты включена (Automatic Translation)
 email-page-updated-subject=Страница электронной почты обновлена тема (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Имя главной странице (Automatic Translation)
 get-creole-editor=Креольский редактор (Automatic Translation)
 get-html-editor=Редактор HTML (Automatic Translation)
 get-media-wiki-editor=Вики редактор СМИ (Automatic Translation)
 initial-node-name=Имя начального узла (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Комментарии страница включена (Automatic Translation)
 page-minor-edit-add-social-activity=Малой страница Правка добавить социальной активности (Automatic Translation)
 page-minor-edit-send-email=Редактирование страницы незначительные отправить письмо (Automatic Translation)
