--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_sk.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Predvolený formát (Automatic Translation)
 email-page-added-body=Telo e-mailovej stránky pridanú (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Stránka pridaná predmet e-mailu (Automatic Translatio
 email-page-updated-body=E-mailová stránka aktualizovaná tela (Automatic Translation)
 email-page-updated-enabled=E-mailová stránka aktualizovaná povolené (Automatic Translation)
 email-page-updated-subject=Stránka aktualizovaná predmet e-mailu (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Predná strana názov (Automatic Translation)
 get-creole-editor=Kreolský Editor (Automatic Translation)
 get-html-editor=HTML Editor (Automatic Translation)
 get-media-wiki-editor=Media Wiki Editor (Automatic Translation)
 initial-node-name=Názov pôvodného uzla (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Stránka komentármi povolené (Automatic Translation)
 page-minor-edit-add-social-activity=Menšie stránky upraviť pridať spoločenské aktivity (Automatic Translation)
 page-minor-edit-send-email=Upraviť stránku maloletého poslať E-mail (Automatic Translation)
