--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_sl.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Privzeta oblika (Automatic Translation)
 email-page-added-body=Telo e-pošte Page dodano (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=E-pošta strani doda predmet (Automatic Translation)
 email-page-updated-body=Stran email modernizirati telesa (Automatic Translation)
 email-page-updated-enabled=Email stran posodobljen usposobiti (Automatic Translation)
 email-page-updated-subject=E-pošta strani posodobljene predmet (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Sprednji strani ime (Automatic Translation)
 get-creole-editor=Kreolka urednik (Automatic Translation)
 get-html-editor=HTML Editor (Automatic Translation)
 get-media-wiki-editor=Wiki Media Editor (Automatic Translation)
 initial-node-name=Ime začetnega vozlišča (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Komentarji strani omogočen (Automatic Translation)
 page-minor-edit-add-social-activity=Strani manjše urejanje dodati družbenih dejavnosti (Automatic Translation)
 page-minor-edit-send-email=Strani manjše urejanje pošljite e-pošto (Automatic Translation)
