--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_th.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_th.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=รูปแบบเริ่มต้น (Automatic Translation)
 email-page-added-body=ร่างกายเพิ่มหน้าอีเมล์ (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=หน้าเพิ่มหัวเรื่อง 
 email-page-updated-body=อีหน้าปรับปรุงร่างกาย (Automatic Translation)
 email-page-updated-enabled=ปรับปรุงหน้าอีเมเปิดใช้งาน (Automatic Translation)
 email-page-updated-subject=เรื่องการปรับปรุงหน้าอีเมล์ (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=ชื่อหน้า (Automatic Translation)
 get-creole-editor=แก้ไขภาษา (Automatic Translation)
 get-html-editor=แก้ไข HTML (Automatic Translation)
 get-media-wiki-editor=แก้ไข Wiki สื่อ (Automatic Translation)
 initial-node-name=ชื่อเริ่มต้นโหน (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=ความคิดเห็นหน้าเปิดใช้งาน (Automatic Translation)
 page-minor-edit-add-social-activity=แก้หน้ารองเพิ่มกิจกรรมทางสังคม (Automatic Translation)
 page-minor-edit-send-email=รองหน้าแก้ส่งอีเมล (Automatic Translation)
