--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_tr.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Varsayılan biçimi (Automatic Translation)
 email-page-added-body=E-posta Page Added vücut (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=E-posta sayfa konu eklendi (Automatic Translation)
 email-page-updated-body=E-posta sayfa vücut güncelleştirmek (Automatic Translation)
 email-page-updated-enabled=E-posta sayfa güncelleştirmek etkin (Automatic Translation)
 email-page-updated-subject=E-posta sayfa konu güncellenir (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Ön sayfa adı (Automatic Translation)
 get-creole-editor=Creole Düzenleyicisi (Automatic Translation)
 get-html-editor=HTML Düzenleyicisi (Automatic Translation)
 get-media-wiki-editor=Medya Wiki Editörü (Automatic Translation)
 initial-node-name=İlk düğüm adı (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Etkin sayfa Yorumlar (Automatic Translation)
 page-minor-edit-add-social-activity=Sayfa küçük Düzenle sosyal aktivite Ekle (Automatic Translation)
 page-minor-edit-send-email=Sayfa küçük düzenleme e-posta göndermek (Automatic Translation)
