--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_uk.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Формат за промовчанням (Automatic Translation)
 email-page-added-body=Додано сторінку тілі електронної пошти (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Додано сторінку електронної п
 email-page-updated-body=Електронну сторінку оновлено тіла (Automatic Translation)
 email-page-updated-enabled=Електронну сторінку оновлено включений (Automatic Translation)
 email-page-updated-subject=Електронну сторінку оновлено тема (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Стартова сторінка ім'я (Automatic Translation)
 get-creole-editor=Креольський редактор (Automatic Translation)
 get-html-editor=Редактор HTML (Automatic Translation)
 get-media-wiki-editor=Медіа вікі редактор (Automatic Translation)
 initial-node-name=Початковий вузол ім'я (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Сторінки коментарів включена (Automatic Translation)
 page-minor-edit-add-social-activity=Сторінка Неповнолітній редагування додати Соціальна активність (Automatic Translation)
 page-minor-edit-send-email=Сторінка Неповнолітній редагування надіслати листа (Automatic Translation)
