--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_vi.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=Định dạng mặc định (Automatic Translation)
 email-page-added-body=Email Page Added cơ thể (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=Email trang nhập Chủ đề (Automatic Translation)
 email-page-updated-body=Email trang Cập Nhật cơ thể (Automatic Translation)
 email-page-updated-enabled=Email trang Cập Nhật được kích hoạt (Automatic Translation)
 email-page-updated-subject=Email trang Cập Nhật chủ đề (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=Trang tên (Automatic Translation)
 get-creole-editor=Creole Editor (Automatic Translation)
 get-html-editor=Trình soạn thảo HTML (Automatic Translation)
 get-media-wiki-editor=Phương tiện truyền thông Wiki Editor (Automatic Translation)
 initial-node-name=Tên ban đầu nút (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=Trang ý kiến được kích hoạt (Automatic Translation)
 page-minor-edit-add-social-activity=Chỉnh sửa trang tiểu thêm hoạt động xã hội (Automatic Translation)
 page-minor-edit-send-email=Chỉnh sửa trang tiểu gửi Email (Automatic Translation)
