--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_zh_TW.properties
@@ -1,4 +1,4 @@
-allowed-wiki-attachment-mime-types=Allowed Wiki attachment mime types (Automatic Copy)
+allowed-wiki-attachment-mime-types=Allowed Wiki Attachment Mime Types (Automatic Copy)
 allowed-wiki-attachment-mime-types-description=Set valid mime types for wiki attachments. A mime type of * will permit all mime types. (Automatic Copy)
 default-format=預設格式 (Automatic Translation)
 email-page-added-body=電子郵件頁面添加正文 (Automatic Translation)
@@ -7,12 +7,13 @@ email-page-added-subject=電子郵件頁面添加主題 (Automatic Translation)
 email-page-updated-body=電子郵件頁面更新正文 (Automatic Translation)
 email-page-updated-enabled=已啟用電子郵件頁面更新 (Automatic Translation)
 email-page-updated-subject=電子郵件頁面更新主題 (Automatic Translation)
+enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
 front-page-name=首頁名稱 (Automatic Translation)
 get-creole-editor=克裡奧爾語編輯器 (Automatic Translation)
 get-html-editor=HTML 編輯器 (Automatic Translation)
 get-media-wiki-editor=媒體 Wiki 編輯器 (Automatic Translation)
 initial-node-name=初始節點名稱 (Automatic Translation)
-maximum-wiki-attachment-size=Maximum Wiki attachment size (Automatic Copy)
+maximum-wiki-attachment-size=Maximum Wiki Attachment Size (Automatic Copy)
 page-comments-enabled=已啟用頁面批註 (Automatic Translation)
 page-minor-edit-add-social-activity=頁面小編輯添加社交活動 (Automatic Translation)
 page-minor-edit-send-email=頁面次要編輯發送電子郵件 (Automatic Translation)
