--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_hr.properties
@@ -7,7 +7,7 @@ email-page-added-subject=Email Page Added Subject (Automatic Copy)
 email-page-updated-body=Email Page Updated Body (Automatic Copy)
 email-page-updated-enabled=Email Page Updated Enabled (Automatic Copy)
 email-page-updated-subject=Email Page Updated Subject (Automatic Copy)
-enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
+enable-highlight-creole-format=Enable the highlighting of links in Creole format for nonexisting wiki pages. (Automatic Copy)
 front-page-name=Front Page Name (Automatic Copy)
 get-creole-editor=Creole Editor (Automatic Copy)
 get-html-editor=HTML Editor (Automatic Copy)
