--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_pt_BR.properties
@@ -7,7 +7,7 @@ email-page-added-subject=Assunto adicionado da página de e-mail
 email-page-updated-body=Corpo atualizado da página de e-mail
 email-page-updated-enabled=Página de e-mail atualizada habilitada
 email-page-updated-subject=Assunto atualizado da página de e-mail
-enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
+enable-highlight-creole-format=Ative o realce de links no formato crioulo para páginas wiki não existentes. (Automatic Translation)
 front-page-name=Nome da primeira página
 get-creole-editor=Editor Creole
 get-html-editor=Editor HTML
