--- a/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/wiki/wiki-api/src/main/resources/content/Language_ta_IN.properties
@@ -7,7 +7,7 @@ email-page-added-subject=Email Page Added Subject
 email-page-updated-body=Email Page Added Body
 email-page-updated-enabled=Email Page Updated Enabled
 email-page-updated-subject=Email Page Updated Subject
-enable-highlight-creole-format=Enable the highlighting of links in creole format to unexisting wiki pages (Automatic Copy)
+enable-highlight-creole-format=Enable the highlighting of links in Creole format for nonexisting wiki pages. (Automatic Copy)
 front-page-name=முகப்பு பக்கத்தின் பெயர்
 get-creole-editor=Creole Editor
 get-html-editor=HTML Editor
