LPS-99690 Build lang

--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ta_IN.properties
@@ -293,6 +293,7 @@ web-content-title=வெப்கன்டன்டின் பெயர்
 web-content-translation=வெப்கன்டன்டின் மொழிபெயர்ப்பு
 web-content-type=வெப்கன்டன்டின் வகை
 web-content-updated-email=வெப் கன்டன்ட் திருத்தப்படும்பொழுது அனுப்பும் மின்னஞ்சல்
+with-expired-versions=With Expired Versions (Automatic Copy)
 x-added-a-new-web-content-article={0} இந்த வெப் கன்டன்டை இணைத்துள்ளார்.
 x-moved-a-web-content-from-a-folder={0} வெப் கன்டன்டை ஃபோல்டரிலிருந்து நகர்த்தியுள்ளார்.
 x-moved-a-web-content-to-a-folder={0} வெப் கன்டன்டை ஃபோல்டருக்கு நகர்த்தியுள்ளார்.
