--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Simular entradas de segmentos
 anonymous-user-segments-cache-expiration-time-description=Defina el tiempo (en segundos) después del que se borrará la caché de segmentos anónimos.
 anonymous-user-segments-cache-expiration-time-name=Tiempo de expiración de caché de segmentos de usuarios anónimos
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Condiciones
 conditions-match=Las condiciones coinciden con
