--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Simuleerida segmentide kanded (Automatic Transl
 anonymous-user-segments-cache-expiration-time-description=Määratlege aeg sekundites, kus anonüümse segmendi vahemälu tühjendatakse. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonüümse kasutaja segmentide vahemälu aegumisaeg (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Tingimused (Automatic Translation)
 conditions-match=Võistluse tingimused (Automatic Translation)
