--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Symulować segmentów wpisy (Automatic Translat
 anonymous-user-segments-cache-expiration-time-description=Zdefiniuj czas (w sekundach), w którym pamięć podręczna segmentu anonimowego jest wyczyszczona. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonimowe segmenty użytkownika czas wygaśnięcia pamięci podręcznej (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Warunki (Automatic Translation)
 conditions-match=Warunki dopasowania (Automatic Translation)
