--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=شبیه سازی بخش های مطالب (Aut
 anonymous-user-segments-cache-expiration-time-description=تعریف زمان ، در ثانیه ، که در آن کش بخش ناشناس پاک شده است. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=کاربر ناشناس بخش کش زمان انقضا (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=شرایط (Automatic Translation)
 conditions-match=شرایط مسابقه (Automatic Translation)
