--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Imituoti segmentų įrašai (Automatic Translat
 anonymous-user-segments-cache-expiration-time-description=Nurodykite laiką sekundėmis, kuriuo išvaloma anoniminių segmentų talpykla. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anoniminių vartotojų segmentų talpyklos galiojimo laikas (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Sąlygos (Automatic Translation)
 conditions-match=Sąlygas rungtynės (Automatic Translation)
