--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_PT.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Simulate Segments Entries (Automatic Copy)
 anonymous-user-segments-cache-expiration-time-description=Define the time, in seconds, in which the anonymous segment cache is cleared. (Automatic Copy)
 anonymous-user-segments-cache-expiration-time-name=Anonymous User Segments Cache Expiration Time (Automatic Copy)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Conditions (Automatic Copy)
 conditions-match=Condições de partida (Automatic Translation)
