--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Simulovať segmenty položky (Automatic Transla
 anonymous-user-segments-cache-expiration-time-description=Definujte čas v sekundách, v ktorom je vymazaná anonymná vyrovnávacia pamäť segmentu. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonymný používateľ segmenty cache vypršania času (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Podmienky (Automatic Translation)
 conditions-match=Podmienky zápas (Automatic Translation)
