--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Segmentleri girişleri simülasyonu (Automatic 
 anonymous-user-segments-cache-expiration-time-description=Adsız segment önbelleğinin temizlendiği süreyi saniye cinsinden tanımlayın. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Anonim Kullanıcı segmentleri önbellek sona erme zamanı (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Koşullar (Automatic Translation)
 conditions-match=Koşullar maç (Automatic Translation)
