--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=Mô phỏng các phân đoạn mục (Automatic
 anonymous-user-segments-cache-expiration-time-description=Xác định thời gian, trong vài giây, trong đó bộ nhớ cache phân đoạn ẩn danh bị xóa. (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=Ẩn danh người dùng phân đoạn cache hết hạn thời gian (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=Điều kiện (Automatic Translation)
 conditions-match=Phù hợp với điều kiện (Automatic Translation)
