--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
@@ -6,6 +6,7 @@ action.SIMULATE_SEGMENTS_ENTRIES=類比段條目 (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-description=定義清除匿名段緩存的時間(以秒為單位)。 (Automatic Translation)
 anonymous-user-segments-cache-expiration-time-name=匿名使用者段緩存過期時間 (Automatic Translation)
 bounce-rate=Bounce Rate (Automatic Copy)
+check-interval-segments-time-description=Define the time, in minutes, in which the segments are retrieved from Analytics Cloud. (Automatic Copy)
 click=Click (Automatic Copy)
 conditions=條件 (Automatic Translation)
 conditions-match=條件匹配 (Automatic Translation)
