--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ar.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=تسمية القائمة
 model.resource.com.liferay.app.builder=باني التطبيق
 native=أصلي
+native-fields=Native Fields (Automatic Copy)
 new-app=تطبيق جديد
 new-custom-object=كائن مخصص جديد
 new-form-view=طريقة عرض نموذج جديدة
