--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ca.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Etiqueta de menú
 model.resource.com.liferay.app.builder=Creador d'aplicacions
 native=Natiu
+native-fields=Native Fields (Automatic Copy)
 new-app=Aplicació nova
 new-custom-object=Nou objecte personalitzat
 new-form-view=Nova vista de formulari
