--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fi.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Valikon Selite
 model.resource.com.liferay.app.builder=App Builder
 native=Natiivi
+native-fields=Native Fields (Automatic Copy)
 new-app=Uusi Sovellus
 new-custom-object=Uusi Mukautettu Objekti
 new-form-view=Uusi Lomakenäkymä
