--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nl.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menulabel
 model.resource.com.liferay.app.builder=App-bouwer
 native=Systeemeigen
+native-fields=Native Fields (Automatic Copy)
 new-app=Nieuwe app
 new-custom-object=Nieuw aangepast object
 new-form-view=Nieuwe formulierweergave
