--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_pt_BR.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Etiqueta do Menu
 model.resource.com.liferay.app.builder=Construtor de Aplicativo
 native=Nativo
+native-fields=Native Fields (Automatic Copy)
 new-app=Novo Aplicativo
 new-custom-object=Novo Objeto Personalizado
 new-form-view=Nova Visualização de Formulário
