--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_zh_CN.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=菜单标签
 model.resource.com.liferay.app.builder=应用构建器
 native=原生
+native-fields=Native Fields (Automatic Copy)
 new-app=新应用
 new-custom-object=新自定义对象
 new-form-view=新表单视图
