--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_de.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menübeschriftung
 model.resource.com.liferay.app.builder=App-Builder
 native=Nativ
+native-fields=Native Fields (Automatic Copy)
 new-app=Neue App
 new-custom-object=Neues benutzerdefiniertes Objekt
 new-form-view=Neue Formularansicht
