--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_en_GB.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menu Label (Automatic Copy)
 model.resource.com.liferay.app.builder=App Builder (Automatic Copy)
 native=Native (Automatic Copy)
+native-fields=Native Fields (Automatic Copy)
 new-app=New App (Automatic Copy)
 new-custom-object=New Custom Object (Automatic Copy)
 new-form-view=New Form View (Automatic Copy)
