--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_es.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Etiqueta de menú
 model.resource.com.liferay.app.builder=Generador de aplicación
 native=Nativo
+native-fields=Native Fields (Automatic Copy)
 new-app=Nueva aplicación
 new-custom-object=Nuevo objeto personalizado
 new-form-view=Nueva vista de formulario
