--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ja.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=メニューラベル
 model.resource.com.liferay.app.builder=アプリビルダー
 native=ネイティブ
+native-fields=Native Fields (Automatic Copy)
 new-app=新規アプリ
 new-custom-object=新規カスタムオブジェクト
 new-form-view=新規フォームビュー
