--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nb.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menymerkelapp
 model.resource.com.liferay.app.builder=Applikasjonsbygger
 native=Native
+native-fields=Native Fields (Automatic Copy)
 new-app=Ny app
 new-custom-object=Nytt egendefinert objekt
 new-form-view=Ny skjemavisning
