--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_sv.properties
@@ -52,6 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menyetikett
 model.resource.com.liferay.app.builder=Appskapare
 native=Intern
+native-fields=Native Fields (Automatic Copy)
 new-app=Ny app
 new-custom-object=Nytt anpassat objekt
 new-form-view=Ny formulärvy
